--- a/Azure Plate/index.html
+++ b/Azure Plate/index.html
@@ -17,6 +17,8 @@
 
 <!-- Bootstrap JS + Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <style>
          
@@ -311,20 +313,13 @@
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: linear-gradient(
-        rgba(0, 0, 0, 0.45),
-        rgba(0, 0, 0, 0.45)
-    ),
-    url('../assets/hero-bg.jpg'); 
+  background-image: url(assets/banner.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     text-align: center;
 }
 
-.hero{
-  background-image: url(assets/banner.png);
-}
 .hero h1 {
     font-size: 64px;
     font-weight: 700;
@@ -407,6 +402,8 @@
     padding: 40px;
     border-radius: 15px;
     transition: 0.3s;
+    display: flex;
+    align-items: center;
 }
 
 .about_section .box:hover {
@@ -534,11 +531,13 @@
 .news_section .img-box {
     width: 100%;
     overflow: hidden;
+    height: 80%; 
 }
 
 .news_section .img-box img {
-    width: 100%;
-    transition: 0.4s;
+  width: 100%;
+    height: 100%;       
+    overflow: hidden;
 }
 
 .news_section .box:hover .img-box img {
@@ -568,6 +567,7 @@
         .testimonial-item {
             background: #fff;
             transition: 0.3s;
+            box-shadow: 0 10px 25px rgba(0,0,0,.15);
         }
 
         .testimonial-item:hover {
@@ -584,16 +584,18 @@
     font-weight: 700;
     margin-bottom: 40px;
     text-align: center;
-    color: #000000;
+  color: #fea116;
         }
 
         /* ===== VIDEO SECTION ===== */
         .video {
-            background: url("./assets/thumbnail.jfif") center/cover;
+            background:linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url("./assets/images.jfif");
             min-height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
+    background-repeat: no-repeat;
+    background-size: cover;
         }
 
         .btn-play {
@@ -628,7 +630,7 @@
     font-weight: 700;
     margin-bottom: 40px;
     text-align: center;
-    color: #000000;
+    color: #fea116;
         }
 
         .info-box {
@@ -957,7 +959,7 @@
 </section>
 
 <!-- ================= DESSERTS ================= -->
-  <section class="container my-5">
+<section class="container my-5">
   <h2 class="category-title">Desserts</h2>
   <div class="row g-4">
 
@@ -1228,7 +1230,8 @@
         <div class="modal-content">
             <div class="modal-body p-0">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/DWRcNpR6Kdc" allowfullscreen></iframe>
+                  <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/dzKiBq11mHQ?si=Hn9XYRcIQfDcwca3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1376,4 +1379,4 @@
 
 </body>
 
-          </html>
+</html>
